Add games listing endpoint
